--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   path_provider: ^2.0.10
   get_it: ^7.2.0
   animated_splash_screen: ^1.2.0
+  google_sign_in: ^5.4.1
+  firebase_auth: ^3.9.0
   
 
 dev_dependencies:
@@ -39,7 +41,10 @@ flutter_icons:
   # adaptive_icon_padding: true
 
 flutter:
-
   uses-material-design: true
   assets:
     - assets/icon/icon.png
+    - assets/icon/google_signin.png
+    - assets/icon/feed.png
+    - assets/icon/fichas.png
+    - assets/icon/students.png
